<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Polyvox</string>
    <string name="account_type">Polyvox</string>
    <string name="share_stream_body">Je suis un débat sur Polyvox:</string>
    <string name="join_me">Rejoignez moi!</string>
    <string name="share_with">Partager avec:</string>
    <string name="search">Rechercher</string>
    <string name="profile">Profil</string>
    <string name="search_hint">Sujet, thème&#8230;</string>
    <string name="action_settings">Paramètres</string>
    <string name="tab_discover">Diffusions</string>
    <string name="tab_friends">Amis</string>
    <string name="tab_chat">Chat</string>
    <string name="tab_historic">Historique</string>
    <string name="tab_queue">File d\'attente</string>
    <string name="tab_files">Documents</string>
    <string name="network_settings">Paramètres réseau</string>
    <string name="no_network">Problème de réseau</string>
    <string name="no_wifi_home">Erreur de réseau.  Veuillez vérifier vos paramètres internet</string>
    <string name="no_server">l\'application Polyox n\'est pas disponible actuellement.  Veuillez réessayer plus tard.</string>
    <string name="username_hint">Identifiant</string>
    <string name="mail_hint">E-mail</string>
    <string name="date_hint">Date de naissance (13 ans minimum)</string>
    <string name="password_hint">Mot de passe</string>
    <string name="login_title">Connexion</string>
    <string name="login_prompt_message">Connectez vous!</string>
    <string name="login_or">ou</string>
    <string name="login_connect">Se connecter</string>
    <string name="login_connect_waiting">Connexion…</string>
    <string name="login_connection_problem">Problèmes de connexion?</string>
    <string name="login_create_prompt">Pas encore rejoint la communauté?</string>
    <string name="login_create_account">Créer un compte</string>
    <string name="account_created">votre compte a été crée, vous etes maintenant connecté!</string>
    <string name="login_incorrect_credentials">E-mail ou mot de passe incorrect</string>
    <string name="new_incorrect_credentials">nouvel E-mail ou mot de passe actuel incorrects</string>
    <string name="logout">Déconnexion</string>
    <string name="logout_confirm" tools:ignore="Typos">Voulez vous vous déconnecter de l\'application Polyvox?</string>
    <string name="logout_been">vous avez été déconnecté de l\'application</string>
    <string name="unknown_error">erreur innatendue</string>
    <string name="create_account">Inscription</string>
    <string name="register_sending">envoi en cours…</string>
    <string name="CGU_accept_start">Accepter les \u0020</string>
    <string name="CGU">Conditions générales d\'utilisation</string>
    <string name="register_mail_hint_bottom">Votre email ne sera jamais divulgué.</string>
    <string name="register_username_hint_bottom">6 caractères minimum, composé uniquement de lettres et chiffres</string>
    <string name="register_password_hint_bottom">entre 8 et 128 caractères, avec 1 majuscule et 1 chiffre au minimum</string>
    <string name="info_user_hint_bottom">entre 2 et 128 caractères alphabétiques</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="maybe_i_dont_know" translatable="false">Can you repeat the question? YOU\'RE NOT THE BOSS OF ME NOW</string>
    <string name="register_mail_error">Email non valide.</string>
    <string name="register_username_error">Nom d\'utilisateur invalide.</string>
    <string name="register_dob_error">L\'utilisateur doit avoir 13 ans au minimum.</string>
    <string name="register_password_error">Mot de passe invalide.</string>
    <string name="register_confirm_password_error">Mot de passe different.</string>
    <string name="register_cgu_error">Veuillez accepter les conditions d\'utilisation.</string>
    <string name="register_mail_already_used">L\'adresse e-mail est déjà utilisée.</string>
    <string name="register_ID_already_used">Ce nom d\'utilisateur est déjà pris.</string>
    <string name="join">rejoindre</string>
    <string name="followers">followers</string>
    <string name="followed">suivis</string>
    <string name="follow">suivre</string>
    <string name="unfollow">ne plus suivre</string>
    <string name="user">Utilisateur</string>
    <string name="is_followed"> \u0020 est suivi</string>
    <string name="is_no_more_followed"> \u0020 n\'est plus suivi</string>
    <string name="modify_profile">Modifier le profil</string>
    <string name="update">Mettre à jour</string>
    <string name="welcome">Bienvenue!</string>
    <string name="not_verified_title">Compte non vérifié</string>
    <string name="not_verified_message">vérifiez votre adresse e-mail pour accéder à cette fonctionnalité.\n\n
    Un mail de confirmation vous a été envoyé à l\'inscription, veuillez le consulter.</string>
    <string name="not_verified_resend">Me le renvoyer</string>
    <string name="not_verified_nope">Je vais le retrouver</string>
    <string name="confirmation_mail_sent_short">L\'e-mail de confirmation a bien été envoyé</string>
    <string name="confirmation_mail_sent1">Un e-mail de confirmation a été envoyé à l\'adresse:</string>
    <string name="confirmation_mail_sent2">Consultez votre boite mail pour valider votre compte  et profiter pleinement de l\'expérience Polyvox</string>
    <string name="mail_verified">Votre adresse e-mail\n
        a bien été vérifiée!</string>
    <string name="mail_verified_description">Vous pouvez maintenant pleinement profiter de l\'expérience Polyvox.</string>
    <string name="back_home">Retourner à la page d\'acceuil</string>
    <string name="banned">Vous avez été banni de Polyvox</string>
    <string name="users">Utilisateurs</string>
    <string name="rooms">Salons</string>
    <string name="rooms_long">Salons de discussion</string>
    <string name="top">Top</string>
    <string name="no_search_result">Aucun résultat</string>
    <string name="no_search_result_details">La recherche n\'a pas donnée de résultats\nVeuillez essayer une autre requete.</string>
    <string name="name">Nom</string>
    <string name="surname">Prénom</string>
    <string name="description">description</string>
    <string name="photo">photo</string>
    <string name="user_info">informations utilisateur</string>
    <string name="mail">e-mail</string>
    <string name="mail_and_pass">e-mail &amp; mot de passe</string>
    <string name="bio_hint">Présentez vous!</string>
    <string name="bio_updated">la biographie a bien été mise à jour</string>
    <string name="bio_too_long">la biographie est trop longue (500 caractères max)</string>
    <string name="user_info_updated">les informations ont bien été mises à jour</string>
    <string name="profile_picture_current">votre image de profil actuelle</string>
    <string name="profile_picture_no">vous n\'avez pas encore d\'image de profil.\n
    rajoutez en une!
    </string>
    <string name="profile_picture_new">la nouvelle image de profil</string>
    <string name="profile_picture_add">ajouter une image de profil</string>
    <string name="profile_picture_change">changer l\'image</string>
    <string name="profile_picture_apply">utiliser cette image</string>
    <string name="profile_picture_invalid">un problème s\'est produit avec cette image</string>
    <string name="file_invalid">un problème s\'est produit avec ce fichier</string>
    <string name="forgot_password">mot de passe oublié</string>
    <string name="forgot_password_prompt">Veuillez renseigner votre adresse e-mail\npour recevoir un lien de changement de mot de passe.</string>
    <string name="send_mail">envoyer le mail.</string>
    <string name="mail_sent">l\'e-mail a bien été envoyé</string>
    <string name="password_changed">le mot de passe a bien été changé.\nvous pouvez vous connecter</string>
    <string name="invalid_link">le lien que vous avez ouvert semble invalide</string>
    <string name="change_password">changer le mot de passe</string>
    <string name="change_password_prompt">Vous pouvez renseigner un nouveau mot de passe.</string>
    <string name="confirm_password">Confirmez votre mot de passe</string>
    <string name="passwords_not_identical">les mots de passes ne sont pas identiques</string>
    <string name="confirm_password_hint_bottom">retapez votre mot de passe</string>
    <string name="security_confirm_pass">Pour des raisons de sécurité,  veuillez renseigner votre mot de passe actuel  pour modifier vos informations.</string>
    <string name="password_actual">Mot de passe actuel</string>
    <string name="password_new">Nouveau mot de passe</string>
    <string name="downloaded"> \u0020 a été enregistré sur l\'appareil</string>
    <string name="download_error">le téléchargement a échoué</string>
    <string name="discovered">J\'ai découvert ça sur Polyvox:\n</string>
    <string name="open_with">Ouvrir avec:</string>
    <string name="no_friends">Pas encore de contacts</string>
    <string name="no_friends_subtext">Ajoutez des amis en cherchant leur profil sur Polyvox!</string>
    <string name="wait_room_start">En attente du lancement de la salle</string>
    <string name="enter_message_hint">écrivez un message</string>
    <string name="add_file">ajouter un fichier</string>
    <string name="file">fichier</string>
    <string name="send">envoyer</string>
    <string name="size">taille: \u0020</string>
    <string name="rate_user_text_start">qu\'avez vous pensé de  \u0020 </string>
    <string name="rate_user_text_end" translatable="false">\?:</string>
    <string name="send_comment">laisser un commentaire</string>
    <string name="send_comment_for">laisser un commentaire pour</string>
    <string name="report">signaler</string>
    <string name="user_reported">l\'utilisateur %1$s a bien été signalé</string>
    <string name="report_sentence">signaler le comportement de</string>
    <string name="description_required">Description (requis)</string>
    <string name="report_error_params">veuillez fournir une raison et une description du problème.</string>
    <string name="left_waitlist"> \u0020 a quitté la file d\'attente</string>
    <string name="waited_turn"> \u0020 a passé son tour</string>
    <string name="joined_waitlist"> \u0020 a rejoint la file d\'attente</string>
    <string name="start_chatting">envoyer un message</string>
    <string name="accept_permission">acceptez cette permission pour utiliser cette fonctionnalité</string>
    <string name="subscribe">M\'abonner</string>
    <string name="become_premium">Devenir premium</string>
    <string name="not_now">pas maintenant</string>
    <string name="premium_ok">Vous etes maintenant un utilisateur Premium de Polyvox!</string>
    <string name="please_register">Veuillez vous inscrire pour accéder à cette fonctionnalité</string>
    <string name="licence_and_credits">Licenses et Crédits</string>
    <string name="date_format_today">HH:mm</string>
    <string name="date_format_yesterday">\'hier\', HH:mm</string>
    <string name="date_format_current_week">EEEE, HH:mm</string>
    <string name="date_format_current_year">d MMMM</string>
    <string name="date_format_diff_year">d MMMM yyyy</string>
    <string name="yesterday">hier</string>
    <string name="year">Année</string>
    <string name="day">Jour</string>
    <string-array name="months_spinner">
        <item>Mois</item>
        <item>Janvier</item>
        <item>Février</item>
        <item>Mars</item>
        <item>Avril</item>
        <item>Mai</item>
        <item>Juin</item>
        <item>Juillet</item>
        <item>Aout</item>
        <item>Septembre</item>
        <item>Octobre</item>
        <item>Novembre</item>
        <item>Décembre</item>
    </string-array>
</resources>