<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/LayoutCreateAccountActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:visibility="visible"
        tools:context=".User.Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/mail_hint" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/RegisterEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/RegisterEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rectangle_border_textview"
            android:inputType="textEmailAddress"
            android:maxLines="1">

        </android.support.design.widget.TextInputEditText>

        <TextView
            style="@style/AppTheme.RegisterHint"
            android:id="@+id/RegisterMailHint"
            android:text="@string/register_mail_hint_bottom"/>

    </android.support.design.widget.TextInputLayout>



    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_hint" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/RegisterIDLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:visibility="visible"
        app:errorEnabled="true">

        <TextView
            style="@style/AppTheme.RegisterHint"
            android:id="@+id/RegisterIDHint"
            android:text="@string/register_username_hint_bottom"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/RegisterIDInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@drawable/rectangle_border_textview"
            android:inputType="textEmailAddress"
            android:maxLines="1">

        </android.support.design.widget.TextInputEditText>


    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/password_hint" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/RegisterPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- 1 line under: android:drawableStart="@android:drawable/ic_lock_idle_lock" -->

            <android.support.design.widget.TextInputEditText
                android:id="@+id/RegisterPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:background="@drawable/rectangle_border_textview"
                android:inputType="textPassword"
                android:maxLines="1">
            </android.support.design.widget.TextInputEditText>

            <TextView
                style="@style/AppTheme.RegisterHint"
                android:id="@+id/RegisterPassHint"
                android:text="@string/register_password_hint_bottom"/>

        </android.support.design.widget.TextInputLayout>



    <!-- android.support.design.widget.TextInputLayout
        android:id="@+id/RegisterPasswordConfirmLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/RegisterPasswordConfirmInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:background="@drawable/rectangle_border_textview"
            android:inputType="textPassword"
            android:maxLines="1">
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout -->




    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/date_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <Spinner
            android:id="@+id/spinnerDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <Spinner
            android:id="@+id/spinnerYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/CGUCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/CGU_accept_start"
            tools:text="@string/CGU_accept_start" />

        <Button
            android:id="@+id/CGUButton"
            style="@style/AppTheme.ColoredButton.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCGUButtonClick"
            android:text="@string/CGU"
            android:textColor="@color/colorPrimary"
            tools:text="@string/CGU" />
    </LinearLayout>

    <Button
        android:id="@+id/LoginRegisterButton"
        style="@style/AppTheme.coloredButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/exo_media_button_height"
        android:onClick="onRegisterClick"
        android:text="@string/create_account"
        android:visibility="visible" />

</LinearLayout>