<?xml version="1.0" encoding="utf-8"?>

<!--suppress XmlUnusedNamespaceDeclaration -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/forgot_password_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="25dp"
        android:text="@string/change_password_prompt"
        android:textAlignment="center"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/LayoutLoginActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:visibility="visible"
        tools:context=".User.Login">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/password_hint" />


        <com.tuxlu.polyvox.Utils.UIElements.NoChangingBackgroundTextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- 1 line under: android:drawableStart="@android:drawable/ic_lock_idle_lock" -->

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:background="@drawable/rectangle_border_textview"
                android:inputType="textPassword"
                android:maxLines="1" />

            <TextView
                android:id="@+id/passHint"
                style="@style/AppTheme.RegisterHint"
                android:text="@string/register_password_hint_bottom"
                android:textSize="11sp" />

        </com.tuxlu.polyvox.Utils.UIElements.NoChangingBackgroundTextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/confirm_password" />


        <com.tuxlu.polyvox.Utils.UIElements.NoChangingBackgroundTextInputLayout
            android:id="@+id/oldPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- 1 line under: android:drawableStart="@android:drawable/ic_lock_idle_lock" -->

            <android.support.design.widget.TextInputEditText
                android:id="@+id/oldPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:background="@drawable/rectangle_border_textview"
                android:inputType="textPassword"
                android:maxLines="1">
            </android.support.design.widget.TextInputEditText>

            <TextView
                android:id="@+id/registerPassHint2"
                style="@style/AppTheme.RegisterHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm_password_hint_bottom"
                android:textSize="11sp" />

        </com.tuxlu.polyvox.Utils.UIElements.NoChangingBackgroundTextInputLayout>


        <Button
            android:id="@+id/sendMailButton"
            style="@style/AppTheme.coloredButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/exo_media_button_height"
            android:onClick="buttonClick"
            android:text="@string/change_password"
            android:visibility="visible" />


    </LinearLayout>


</LinearLayout>
