<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/forgot_password_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="25dp"
        android:text="@string/forgot_password_prompt"
        android:textAlignment="center"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/LayoutLoginActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:visibility="visible"
        tools:context=".User.Login">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail_hint" />


        <com.tuxlu.polyvox.Utils.UIElements.NoChangingBackgroundTextInputLayout
            android:id="@+id/mailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rectangle_border_textview"
                android:inputType="textEmailAddress"
                android:maxLines="1">
            </android.support.design.widget.TextInputEditText>

        </com.tuxlu.polyvox.Utils.UIElements.NoChangingBackgroundTextInputLayout>

        <Button
            android:id="@+id/sendMailButton"
            style="@style/AppTheme.coloredButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/exo_media_button_height"
            android:onClick="buttonClick"
            android:text="@string/forgot_password"
            android:visibility="visible" />


    </LinearLayout>


</LinearLayout>
